--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "debug": "^4.3.4",
     "express": "^4.18.2",
@@ -21,7 +22,8 @@
     "express-session": "^1.17.3",
     "http-errors": "^2.0.0",
     "mongodb": "^5.1.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "twig": "^1.16.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
