--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.1.0",
     "morgan": "^1.10.0",
-    "twig": "^1.16.0"
+    "twig": "^1.16.0",
+    "winston": "^3.8.2",
+    "winston-mongodb": "^5.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
