Corregidos errores de configuracion de tests

--- a/sdi2223-entrega2-test-63/pom.xml
+++ b/sdi2223-entrega2-test-63/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.uniovi</groupId>
-    <artifactId>sdi2223-entrega2-test-n</artifactId>
+    <artifactId>sdi2223-entrega2-test-63</artifactId>
     <version>0.0.1-SNAPSHOT</version>
    <packaging>war</packaging>
     <name>sdi2223-entrega2-test-n</name>
@@ -40,10 +40,14 @@
 
     <build>
         <plugins>
-            <!--<plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
