--- a/sdi2223-entrega2-63/package.json
+++ b/sdi2223-entrega2-63/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "bin/www",
   "scripts": {
-    "start": "node www",
+    "start": "node bin/www",
     "dev": "nodemon www -e twig,js,json"
   },
   "repository": {
