--- a/sdi2223-entrega2-test-63/pom.xml
+++ b/sdi2223-entrega2-test-63/pom.xml
@@ -36,6 +36,12 @@
             <artifactId>json-simple</artifactId>
             <version>1.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>4.9.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
